# Physical-AI-Humanoid-Robotics-Textbook

./: .gitignore  RUNNING.md  bibliography.md  create_neon_tables.py  create_neon_tables_fresh.py  create_tables.py  docusaurus.config.js  ingest_content.sh  ingest_via_api.py  install_backend_deps.bat  package-lock.json  package.json  sidebars.js  start_backend.bat  start_backend.sh  start_backend_cohere.sh  start_docusaurus.sh  start_frontend.sh  test_chatbot.py  test_chatbot_detailed.py  test_cohere_models.py  test_db_connection.py  test_qdrant.py  test_retrieval.py  test_selected_text.py
backend/: ingest_content.py  pyproject.toml  rag_chatbot.db  requirements.txt  simple_requirements.txt  start_server.py  test_api_endpoints.py  test_cohere.py  test_retrieval.py  test_retrieval_simple.py
backend/scripts/: ingest_book_content.py
backend/src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
backend/src/ai/: cohere_client.py
backend/src/api/: auth.py  chat_routes.py  main.py
backend/src/database/: database.py  models.py
backend/src/ingestion/: content_pipeline.py
backend/src/models/: chat.py  chat_message.py  chat_session.py
backend/src/rag_chatbot_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/src/services/: conversation_service.py  retrieval_service.py
backend/src/utils/: cache.py  exceptions.py  logging_config.py  rate_limiter.py  text_processing.py  validation.py
backend/src/vector_store/: qdrant_client.py
backend/tests/contract/: test_chat_api.py  test_conversation_history.py  test_retrieval_modes.py
(+142 files in other folders)
